[gd_scene load_steps=3 format=2]

[ext_resource path="res://root/settings.gd" type="Script" id=1]
[ext_resource path="res://root/settings_panel.gd" type="Script" id=2]

[node name="SettingsPanel" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 400.0
theme_type_variation = "Settings"
script = ExtResource( 2 )

[node name="V" type="VBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 1080.0

[node name="Settings" type="ScrollContainer" parent="V"]
margin_right = 400.0
margin_bottom = 1026.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="V" type="VBoxContainer" parent="V/Settings"]
margin_right = 400.0
margin_bottom = 814.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="V/Settings/V"]
margin_right = 400.0
margin_bottom = 66.0
theme_type_variation = "SettingsTitle"
text = "Settings"
align = 1

[node name="Description" type="Label" parent="V/Settings/V"]
visible = false
margin_top = 70.0
margin_right = 400.0
margin_bottom = 109.0
text = "Change how the game runs."
align = 1

[node name="Buffer1" type="HSeparator" parent="V/Settings/V"]
margin_left = 125.0
margin_top = 70.0
margin_right = 275.0
margin_bottom = 103.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="Keybinds" type="VBoxContainer" parent="V/Settings/V"]
margin_left = 131.0
margin_top = 107.0
margin_right = 268.0
margin_bottom = 342.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Settings/V/Keybinds"]
margin_right = 137.0
margin_bottom = 39.0
text = "Keybinds"
align = 1

[node name="LeftKat" type="HBoxContainer" parent="V/Settings/V/Keybinds"]
margin_top = 43.0
margin_right = 137.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="V/Settings/V/Keybinds/LeftKat"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Left Kat"

[node name="Button" type="Button" parent="V/Settings/V/Keybinds/LeftKat"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="LeftDon" type="HBoxContainer" parent="V/Settings/V/Keybinds"]
margin_top = 92.0
margin_right = 137.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="V/Settings/V/Keybinds/LeftDon"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Left Don"

[node name="Button" type="Button" parent="V/Settings/V/Keybinds/LeftDon"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="RightDon" type="HBoxContainer" parent="V/Settings/V/Keybinds"]
margin_top = 141.0
margin_right = 137.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="V/Settings/V/Keybinds/RightDon"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Right Don"

[node name="Button" type="Button" parent="V/Settings/V/Keybinds/RightDon"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="RightKat" type="HBoxContainer" parent="V/Settings/V/Keybinds"]
margin_top = 190.0
margin_right = 137.0
margin_bottom = 235.0

[node name="Label" type="Label" parent="V/Settings/V/Keybinds/RightKat"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Right Kat"

[node name="Button" type="Button" parent="V/Settings/V/Keybinds/RightKat"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="Buffer2" type="HSeparator" parent="V/Settings/V"]
margin_left = 125.0
margin_top = 346.0
margin_right = 275.0
margin_bottom = 379.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="ExtraDisplays" type="VBoxContainer" parent="V/Settings/V"]
margin_left = 92.0
margin_top = 383.0
margin_right = 308.0
margin_bottom = 522.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Settings/V/ExtraDisplays"]
margin_right = 216.0
margin_bottom = 39.0
text = "Extra Displays"
align = 1

[node name="LateEarly" type="HBoxContainer" parent="V/Settings/V/ExtraDisplays"]
margin_top = 43.0
margin_right = 216.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="V/Settings/V/ExtraDisplays/LateEarly"]
margin_top = 3.0
margin_right = 183.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Late/Early Text"

[node name="Options" type="OptionButton" parent="V/Settings/V/ExtraDisplays/LateEarly"]
margin_left = 187.0
margin_right = 216.0
margin_bottom = 45.0

[node name="HitError" type="HBoxContainer" parent="V/Settings/V/ExtraDisplays"]
margin_top = 92.0
margin_right = 216.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="V/Settings/V/ExtraDisplays/HitError"]
margin_top = 4.0
margin_right = 188.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Hit Error Bar"

[node name="Toggle" type="CheckBox" parent="V/Settings/V/ExtraDisplays/HitError"]
margin_left = 192.0
margin_right = 216.0
margin_bottom = 47.0

[node name="Resolution" type="VBoxContainer" parent="V/Settings/V"]
margin_left = 99.0
margin_top = 526.0
margin_right = 301.0
margin_bottom = 681.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Settings/V/Resolution"]
margin_right = 202.0
margin_bottom = 55.0
theme_type_variation = "Resolution"
text = "Resolution (WIP)"
align = 1

[node name="Options" type="OptionButton" parent="V/Settings/V/Resolution"]
margin_left = 86.0
margin_top = 59.0
margin_right = 115.0
margin_bottom = 104.0
size_flags_horizontal = 4

[node name="Fullscreen" type="HBoxContainer" parent="V/Settings/V/Resolution"]
margin_top = 108.0
margin_right = 202.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="V/Settings/V/Resolution/Fullscreen"]
margin_top = 4.0
margin_right = 174.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="Toggle" type="CheckBox" parent="V/Settings/V/Resolution/Fullscreen"]
margin_left = 178.0
margin_right = 202.0
margin_bottom = 47.0

[node name="Buffer3" type="HSeparator" parent="V/Settings/V"]
margin_left = 125.0
margin_top = 685.0
margin_right = 275.0
margin_bottom = 718.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="AudioLabel" type="Label" parent="V/Settings/V"]
margin_top = 722.0
margin_right = 400.0
margin_bottom = 761.0
text = "Audio"
align = 1

[node name="Offset" type="HBoxContainer" parent="V/Settings/V"]
margin_left = 121.0
margin_top = 765.0
margin_right = 278.0
margin_bottom = 814.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Settings/V/Offset"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 44.0
text = "Offset"

[node name="LineEdit" type="LineEdit" parent="V/Settings/V/Offset"]
margin_left = 75.0
margin_right = 157.0
margin_bottom = 49.0
align = 2
placeholder_text = "0"
caret_blink = true
caret_blink_speed = 0.5

[node name="Preferences" type="ScrollContainer" parent="V"]
visible = false
margin_right = 400.0
margin_bottom = 1027.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="V" type="VBoxContainer" parent="V/Preferences"]
margin_right = 400.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="V/Preferences/V"]
margin_right = 400.0
margin_bottom = 66.0
theme_type_variation = "SettingsTitle"
text = "Preferences"
align = 1

[node name="Buffer" type="HSeparator" parent="V/Preferences/V"]
margin_left = 125.0
margin_top = 70.0
margin_right = 275.0
margin_bottom = 103.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="Description" type="Label" parent="V/Preferences/V"]
margin_top = 107.0
margin_right = 400.0
margin_bottom = 146.0
text = "uhm... cheesed to meet you?"
align = 1

[node name="AnimatedSprite" type="TextureRect" parent="V/Preferences/V"]
margin_top = 150.0
margin_right = 400.0
margin_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="V"]
margin_top = 1030.0
margin_right = 400.0
margin_bottom = 1080.0
rect_min_size = Vector2( 0, 50 )
theme_type_variation = "Settings"

[node name="Settings" type="Button" parent="V/HBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
size_flags_horizontal = 3
theme_type_variation = "SettingsButtons"
text = "Settings"

[node name="Preferences" type="Button" parent="V/HBoxContainer"]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 50.0
size_flags_horizontal = 3
theme_type_variation = "SettingsButtons"
text = "Preferences"

[connection signal="pressed" from="V/Settings/V/Keybinds/LeftKat/Button" to="V/Settings" method="button_pressed" binds= [ "LeftKat" ]]
[connection signal="pressed" from="V/Settings/V/Keybinds/LeftDon/Button" to="V/Settings" method="button_pressed" binds= [ "LeftDon" ]]
[connection signal="pressed" from="V/Settings/V/Keybinds/RightDon/Button" to="V/Settings" method="button_pressed" binds= [ "RightDon" ]]
[connection signal="pressed" from="V/Settings/V/Keybinds/RightKat/Button" to="V/Settings" method="button_pressed" binds= [ "RightKat" ]]
[connection signal="item_selected" from="V/Settings/V/ExtraDisplays/LateEarly/Options" to="V/Settings" method="late_early"]
[connection signal="toggled" from="V/Settings/V/ExtraDisplays/HitError/Toggle" to="V/Settings" method="hit_error_func"]
[connection signal="item_selected" from="V/Settings/V/Resolution/Options" to="V/Settings" method="change_res"]
[connection signal="toggled" from="V/Settings/V/Resolution/Fullscreen/Toggle" to="V/Settings" method="toggle_fullscreen"]
[connection signal="text_changed" from="V/Settings/V/Offset/LineEdit" to="V/Settings" method="change_offset"]
